# dataCollection

./: .editorconfig  .gitignore  LICENSE  README.md  pyproject.toml
src/: gettingUrls
