[project]
name = "dataCollection"
version = "0.0.1"

[tool.poetry]
name = "dataCollection"
version = "0.0.1"
description = "Data collecting from websites and files."
authors = ["Jindřich Šíma"]

[tool.poetry.dependencies]
python = "^3.10.0,<3.12"
weblib=">=0.1.30"
python-dotenv = ">=1.0.1"
unstructured = ">=0.14.0"

[tool.setuptools.packages.find]
# All the following settings are optional:
where = ["src"]  # ["."] by default
include = ["mypackage*"]  # ["*"] by default
exclude = ["mypackage.tests*"]  # empty by default
#namespaces = false  # true by default

[tool.pyright]
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
select = ['E','W','F','I','B','C4','ARG','SIM']
ignore = ['W291','W292','W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
